--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-ui-router": "~0.2.13",
     "traceur-runtime": "~0.0.74",
     "angular": "~1.3.4",
-    "ng-polymer-elements": "~0.2.0"
+    "ng-polymer-elements": "~0.2.0",
+    "core-elements": "Polymer/core-elements#~0.5.4",
+    "paper-elements": "Polymer/paper-elements#~0.5.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
